BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Requirement_vod__c.object
<CustomObject>
    <fields>
        <fullName>InterAct_Process_BMS_EMEA__c</fullName>
        <label>InterAct Process</label>
        <picklist>
            <picklistValues>
                <fullName>Account Plan (Field Access)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliations (soft relationship)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Account (hard relationship)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Change Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iCAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Profiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting (Veeva EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting FFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting H2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising (incl. IM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multichannel Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New User Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Profiling</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interface_Title_BMS__c</fullName>
        <label>Interface Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAM_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Compliance_Value__c</fullName>
        <formula>CASE( 
Legal_Compliance__c, 
 &quot;HIGH&quot; , 3,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal &amp; Compliance Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Compliance__c</fullName>
        <inlineHelpText>Required to Implement the Change to Stay Compliant with Federal Regulations</inlineHelpText>
        <label>Legal &amp; Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Business_Effort_Value__c</fullName>
        <formula>CASE(
Level_of_Business_Effort__c ,
 &quot;HIGH&quot; , 1,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 3,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the Level of Business Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Business Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Business_Effort__c</fullName>
        <inlineHelpText>Low: Requires More Than 20 Days of Business Work Effort
Medium: Requires 9 - 20 Days of Business Work Effort
High:Requires Less Than 8 Days of Business Work Effort</inlineHelpText>
        <label>Level of Business Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_IT_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of IT Effort formula field</description>
        <formula>if(Level_of_IT_Effort__c  = &quot;High&quot;,1,
if(Level_of_IT_Effort__c  = &quot;Medium&quot;,2,
If(Level_of_IT_Effort__c  = &quot;Low&quot;,3,
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of IT Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of IT Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_IT_Effort__c</fullName>
        <description>Level of IT Effort</description>
        <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;,
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;,
IF(TotEst__c &gt; 20.00, &quot;High&quot;,
&quot;Medium&quot;)))</formula>
        <inlineHelpText>Low: Requires More Than 20 Days of IT Work Effort
Medium: Requires 9 - 20 Days of IT Work Effort
High: Requires Less Than 8 Days of IT Work Effort</inlineHelpText>
        <label>Level of IT Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Need_Type_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Feb 2014: Local Need for Country specific requirements.</description>
        <label>Local Need Type</label>
        <picklist>
            <picklistValues>
                <fullName>Legal/Compliance/Data Privacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSL_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobility_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobility Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nat_Group_Mgers_UPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO UPSA June-2014: needed for UPSA specific requirements</description>
        <label>Nat Group Mgers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_BMS_Global_Approval_BMS_EMEA__c</fullName>
        <description>Created by TT 09/30/2013. The field will define whether the EMEA Requirement must be escalated to the Global Team, either by Veeva or by BMS EMEA.</description>
        <label>Needs BMS Global Approval?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Needs_Business_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Business Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Fields</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Obsolete_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Request_Type_BMS_EMEA__c</fullName>
        <description>TT Jan-2014: original type of the request (Change Request or Requirement). Change Requests could have been set as Requirements in the past.</description>
        <inlineHelpText>Used to track whether the Core Change Request used to be a Core Requirement that could not be closed on time.</inlineHelpText>
        <label>Original Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Requirement_BMS_EMEA__c</fullName>
        <description>Used if the Requirement Title needs to be modified.</description>
        <inlineHelpText>Used if the Requirement Title needs to be modified. Start new comments with your initials and date. Additional information provided by BMS.</inlineHelpText>
        <label>Original Requirement</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Requirements_Gathering_ID__c</fullName>
        <description>This is the Functional ID (FX.XX) for the requirement captured during earlier requirements gathering sessions. If this field is blank, then this requirement was documented during design or later stages.</description>
        <inlineHelpText>This is the Functional ID (FX.XX) for the requirement captured during earlier requirements gathering sessions. If this field is blank, then this requirement was documented during design or later stages.</inlineHelpText>
        <label>Original Requirements Gathering ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Reps_UPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO UPSA June-2014: needed for UPSA specific requirements</description>
        <label>Pharmacy Reps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Availability_BMS__c</fullName>
        <label>Platform Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Online Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online &amp; Offline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Veeva_Roadmap__c</fullName>
        <label>Potential Veeva Roadmap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Care_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Adverse Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled Substance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUE Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Force Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Channel Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer &amp; Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pfizer Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Production_Release_Date__c</fullName>
        <label>Production Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAD_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBD_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <description>Populate the Request Rationale field in order to capture the purpose of the requirement and the benefit it will serve.</description>
        <inlineHelpText>Populate the Request Rationale field in order to capture the purpose of the requirement and the benefit it will serve.</inlineHelpText>
        <label>Request Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RS_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Count_BMS_EMEA__c</fullName>
        <description>VPRO, used for reporting purposes</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reg_Group_Mgers_UPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO UPSA June-2014: needed for UPSA specific requirements</description>
        <label>Reg Group Mgers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_BMS__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <label>Regions Requesting</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regulated_BMS__c</fullName>
        <label>Regulated</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Requests__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to link duplicate requirements together or to group similar requirements.</inlineHelpText>
        <label>Related Requirements</label>
        <referenceTo>Requirement_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Requirement_ID__c</fullName>
        <label>Related User Requirement ID</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PMO Tool Kit Release</description>
        <label>Release</label>
        <referenceTo>Release_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Number__c</fullName>
        <description>Removed from Release number.</description>
        <label>Removed From Which Release Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requests removed from a scheduled release.</description>
        <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
        <label>Removed from Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of request.</description>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploria Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Upgrade (Force.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requesting_Business_Unit__c</fullName>
        <label>Requesting Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Care</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requests_Submitted_by_IT__c</fullName>
        <formula>IF((INCLUDES( Impacted_Business__c , &quot;Technology&quot;)), 1, 0)</formula>
        <label>Requests Submitted by IT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement_Date__c</fullName>
        <label>Requirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Requirement Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Requestor__c</fullName>
        <label>Requirement Requestor</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Title__c</fullName>
        <description>Captures the requirement title</description>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Requirement Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for completing SIT.</description>
        <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Title_BMS__c</fullName>
        <label>Section Title</label>
        <picklist>
            <picklistValues>
                <fullName>IMM Sales Reqs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMM MSL Reqs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMM RS Reqs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplant Sales Reqs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0030a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0050a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0060a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0070a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0080a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRF Report R-MSLMR-0109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My List Visit Frequency Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned HCP Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Interaction Detail Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Summary Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD Coaching Summary Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD Field Activity Summary Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Detail__c</fullName>
        <label>Solution Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Configuration Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported via Data Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Custom Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap - Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap - Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Supported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_BMS_EMEA__c</fullName>
        <inlineHelpText>Workshop or person the requirement comes from.</inlineHelpText>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>